# async-shell

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
scripts/: build.sh
src/: grid.rs  lib.rs  main.rs  mcp.rs  pty.rs  session.rs
src/async_shell/: cli.py
