[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "async-shell"
version = "0.1.0"
description = "A headless terminal multiplexer and MCP server designed specifically for AI agents."
authors = [{name = "CURD Project"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
async-shell = "async_shell.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"

[tool.uv]
managed = true
